--- a/cluster-external-management.yaml
+++ b/cluster-external-management.yaml
@@ -12,7 +12,7 @@ apiVersion: ceph.rook.io/v1
 kind: CephCluster
 metadata:
   name: rook-ceph-external
-  namespace: rook-ceph-external # namespace:cluster
+  namespace: rook-ceph # namespace:cluster
 spec:
   external:
     enable: true
