--- a/operator-openshift.yaml
+++ b/operator-openshift.yaml
@@ -162,12 +162,12 @@ data:
   # The default version of CSI supported by Rook will be started. To change the version
   # of the CSI driver to something other than what is officially supported, change
   # these images to the desired release of the CSI driver.
-  # ROOK_CSI_CEPH_IMAGE: "quay.io/cephcsi/cephcsi:v3.6.0"
-  # ROOK_CSI_REGISTRAR_IMAGE: "k8s.gcr.io/sig-storage/csi-node-driver-registrar:v2.5.0"
-  # ROOK_CSI_RESIZER_IMAGE: "k8s.gcr.io/sig-storage/csi-resizer:v1.4.0"
-  # ROOK_CSI_PROVISIONER_IMAGE: "k8s.gcr.io/sig-storage/csi-provisioner:v3.1.0"
-  # ROOK_CSI_SNAPSHOTTER_IMAGE: "k8s.gcr.io/sig-storage/csi-snapshotter:v5.0.1"
-  # ROOK_CSI_ATTACHER_IMAGE: "k8s.gcr.io/sig-storage/csi-attacher:v3.4.0"
+  ROOK_CSI_CEPH_IMAGE: "<registry>:5000/quay.io/cephcsi/cephcsi:v3.6.0"
+  ROOK_CSI_REGISTRAR_IMAGE: "<registry>:5000/k8s.gcr.io/sig-storage/csi-node-driver-registrar:v2.5.0"
+  ROOK_CSI_RESIZER_IMAGE: "<registry>:5000/k8s.gcr.io/sig-storage/csi-resizer:v1.4.0"
+  ROOK_CSI_PROVISIONER_IMAGE: "<registry>:5000/k8s.gcr.io/sig-storage/csi-provisioner:v3.1.0"
+  ROOK_CSI_SNAPSHOTTER_IMAGE: "<registry>:5000/k8s.gcr.io/sig-storage/csi-snapshotter:v5.0.1"
+  ROOK_CSI_ATTACHER_IMAGE: "<registry>:5000/k8s.gcr.io/sig-storage/csi-attacher:v3.4.0"
 
   # (Optional) set user created priorityclassName for csi plugin pods.
   # CSI_PLUGIN_PRIORITY_CLASSNAME: "system-node-critical"
@@ -418,10 +418,10 @@ data:
   CSI_ENABLE_VOLUME_REPLICATION: "false"
   # The timeout value (in seconds) of Ceph commands. It should be >= 1. If this variable is not set or is an invalid value, it's default to 15.
   ROOK_CEPH_COMMANDS_TIMEOUT_SECONDS: "15"
-  # CSI_VOLUME_REPLICATION_IMAGE: "quay.io/csiaddons/volumereplication-operator:v0.3.0"
+  CSI_VOLUME_REPLICATION_IMAGE: "<registry>:5000/quay.io/csiaddons/volumereplication-operator:v0.3.0"
   # Enable the csi addons sidecar.
   CSI_ENABLE_CSIADDONS: "false"
-  # ROOK_CSIADDONS_IMAGE: "quay.io/csiaddons/k8s-sidecar:v0.2.1"
+  ROOK_CSIADDONS_IMAGE: "<registry>:5000/quay.io/csiaddons/k8s-sidecar:v0.2.1"
 ---
 # The deployment for the rook operator
 # OLM: BEGIN OPERATOR DEPLOYMENT
@@ -450,7 +450,7 @@ spec:
       serviceAccountName: rook-ceph-system
       containers:
         - name: rook-ceph-operator
-          image: rook/ceph:master
+          image: <registry>:5000/docker.io/rook/ceph:master
           args: ["ceph", "operator"]
           securityContext:
             runAsNonRoot: true
